Refactor Docker build workflow to simplify process
Removed Trivy vulnerability scanning steps and adjusted workflow triggers.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,14 +1,14 @@
-name: Build, Scan & Push Docker Image
+name: Docker Build & Push
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch: 
-  pull_request:
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for triggering rebuild'
+        required: false
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,37 +27,11 @@ jobs:
 
       - name: Build Docker image
         run: |
+          echo "Rebuilding Docker image. Reason: ${{ github.event.inputs.reason }}"
           docker build -t ghcr.io/the-may/telegram_dicebot:latest \
                        -t ghcr.io/the-may/telegram_dicebot:${{ github.sha }} .
 
-      - name: Run Trivy vulnerability scanner
-        id: trivy_scan
-        uses: aquasecurity/trivy-action@0.33.1
-        with:
-          scan-type: image
-          image-ref: ghcr.io/the-may/telegram_dicebot:${{ github.sha }}
-          format: json
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
-          exit-code: 0   # don’t fail yet, we’ll handle it
-
-      - name: Parse Trivy JSON for CVE count
-        id: check_cves
-        run: |
-          cve_count=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL" or .Severity=="HIGH")] | length' trivy-results.json)
-          echo "cve_count=$cve_count" >> $GITHUB_OUTPUT
-
-      - name: Push Docker image (if no CVEs)
-        if: steps.check_cves.outputs.cve_count == '0'
+      - name: Push Docker image
         run: |
           docker push ghcr.io/the-may/telegram_dicebot:latest
           docker push ghcr.io/the-may/telegram_dicebot:${{ github.sha }}
-
-      - name: Trigger rebuild workflow if CVEs found
-        if: steps.check_cves.outputs.cve_count != '0'
-        uses: peter-evans/workflow-dispatch@v1
-        with:
-          workflow: docker-build.yml
-          ref: main
-          inputs: |
-            reason: "High/Critical CVEs detected, rebuilding image"
